--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 <div class="header__search-container">
                     <div class="container">
                         <form
-                            class="mt-5 mb-5 saerch-input-container"
+                            class="mt-5 mb-5 search-input-container"
                             action="/search"
                             method="get"
                         >
