--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Events</title>
+        <title>Search</title>
         <link
             rel="shortcut icon"
             href="/assets/img/favico.png"
